Added the ready me files and .ignore also

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -12,14 +12,6 @@ pnpm-debug.log*
 .env.test.local
 .env.production.local
 
-# Build outputs
-dist/
-build/
-out/
-
-# Vite
-.vite/
-
 # Logs
 logs
 *.log
@@ -36,6 +28,21 @@ coverage/
 
 # nyc test coverage
 .nyc_output
+
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+jspm_packages/
 
 # Optional npm cache directory
 .npm
@@ -65,21 +72,6 @@ coverage/
 .cache
 .parcel-cache
 
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
-
 # Temporary folders
 tmp/
 temp/
@@ -100,9 +92,25 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
+# Docker
+.dockerignore
+
+# Temporal
+temporal-data/
+
+# MongoDB
+*.db
+*.sqlite
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Test files
+test-results/
+playwright-report/
+test-results.xml
+
+# Local development
+.local/ 
